# echo1-coco-builder

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  test.csv
echo1_coco_builder/: annotations_builder.py  echo1_coco_builder.py  results_builder.py
echo1_coco_builder/coco/: CocoAnnotation.py  CocoCategory.py  CocoImage.py  CocoInfo.py  CocoResult.py
tests/: test_annotations_builder.py  test_echo1_coco_builder.py  test_results_builder.py
tests/data/: test.csv
